--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Webpack App</title>
+        <title>NES TS</title>
     </head>
     <body>
         <h1>Hello world!</h1>
         <h2>Tip: Check your console</h2>
+        <canvas id="canvas" width="1024" height="960"></canvas>
     </body>
     
     <script>
